# mcp

./: .gitignore  Config  DEVELOPMENT.md  README.md  env.example  integration_guide.md  package.json  pyproject.toml  run_agent.py  run_server.py  setup.cfg  setup.py  test_agent.py  test_mcp_integration.py  validate_setup.py
doc/: index.rst
examples/: basic_usage.py
src/: ChatViewProvider.ts  aiAgentService.ts
src/datazone_mcp_server/: server.py
src/datazone_mcp_server/tools/: data_management.py  domain_management.py  environment.py  project_management.py
src/smus_admin_agent/: __init__.py  agent.py  cli.py  config.py
test/: README.md  test_agent.py  test_smus_admin_agent.py
